replace all slugs with /

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/110.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/110.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 110
+slug: /110
 title: "📨 #110: Fresh, Hydrogen, Next.js, Remix, Storybook, useEffect, MJML, MDX, React-Native, ES2022..."
 authors: [slorber]
 date: 06-29-2022
