--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/111.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/111.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 111
+slug: /111
 title: "📨 #111: Reassure, Multiplayer Cursors, Next.js, Meteor, Storybook, TanStack, FlashList, Bun..."
 authors: [slorber]
 date: 07-06-2022
