--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/112.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/112.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 112
+slug: /112
 title: "📨 #112: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
 authors: [slorber]
 date: 07-13-2022
