--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/113.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/113.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 113
+slug: /113
 title: "📨 #113: React source code, SOLID, Remix, Docusaurus, FP, Remotion, Rapier, Hermes, RN at Airbnb..."
 authors: [slorber]
 date: 07-19-2022
