--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/115.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/115.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 115
+slug: /115
 title: "📨 #115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
 authors: [slorber]
 date: 08-05-2022
