--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: /NUMBER-TODO
+slug: /118
 title: "📨 #TEMPLATE: ..."
 authors: [slorber]
 date: 12-31-2022
@@ -7,7 +7,7 @@ image: /img/TWIR_POST.png
 draft: true
 ---
 
-Hi everyone!
+Salut à tous !
 
 <Todo />
 
@@ -37,7 +37,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+<Sponsor2 />
 
 ---
 
@@ -47,15 +47,25 @@ import Support from "../_support.mdx";
 
 ---
 
-## 🧑‍💻 Jobs {#jobs}
+## 🧑‍💻Jobs {#jobs}
 
 <Todo />
 
-💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
+💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
 ---
 
-## 🔀 Other {#other}
+## 🇫🇷 En français {#fr}
+
+Pas de contenu cette semaine 😅
+
+💡Tu peux m'envoyer tes articles en me répondant à [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+
+<Todo />
+
+---
+
+## 🔀 Autre {#other}
 
 <Todo />
 
