--- a/website/newsletter/114.mdx
+++ b/website/newsletter/114.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 114
+slug: /114
 title: "📨 #114: 🎉 official launch of Docusaurus 2.0 🥳️"
 authors: [slorber]
 date: 08-01-2022
@@ -38,9 +38,7 @@ In 2017, they decided to create Docusaurus, a React-based static site generator 
 
 The v1 of Docusaurus quickly became popular, used by React-Native, Jest, Babel, Prettier...
 
-
 ![Sites using Docusaurus v1](https://s3.amazonaws.com/revue/items/images/017/224/025/original/v1.gif?1659345706)
-
 
 ---
 
@@ -48,22 +46,21 @@ The v1 of Docusaurus quickly became popular, used by React-Native, Jest, Babel, 
 
 Following the release of v1, Meta realized some limitations of v1:
 
--   uses React but only on the server side: no hydration nor Single-Page-App navigation
--   the repo was quite monolithic, difficult to maintain and test
--   not very extensible, there was no plugin system
--   the theming was relatively limited, and v1 sites look very similar
+- uses React but only on the server side: no hydration nor Single-Page-App navigation
+- the repo was quite monolithic, difficult to maintain and test
+- not very extensible, there was no plugin system
+- the theming was relatively limited, and v1 sites look very similar
 
 In 2018, Meta decided to **re-create Docusaurus from scratch**, with a brand new architecture:
 
--   React used client and server side (like Next.js, Remix, Gatsby...)
--   Plugin system: allows the community to contribute useful features (OpenAPI integration, local search engine, Sass support...)
--   Much more flexible theming system: possible to override any React component of the theme
--   MDX (Markdown + React) to make your documentation interactive
+- React used client and server side (like Next.js, Remix, Gatsby...)
+- Plugin system: allows the community to contribute useful features (OpenAPI integration, local search engine, Sass support...)
+- Much more flexible theming system: possible to override any React component of the theme
+- MDX (Markdown + React) to make your documentation interactive
 
 Docusaurus 2.0 has been in alpha/beta for **4 years** 🤪, and we finally released the **first stable version**! We delayed this release because it wasn't obvious to respect Semantic Versioning before.
 
 Today, Docusaurus v2 is available with a lot of features, and it would be difficult to list them all: docs, blog, versioning, theming, dark mode, i18n, a11y, SEO, TypeScript, PWA, Algolia DocSearch, MDX...
-
 
 ---
 
@@ -73,7 +70,6 @@ A lot of companies have already adopted Docusaurus 2.0 despite the fact that it 
 
 ![npm growth](https://s3.amazonaws.com/revue/items/images/017/224/035/mail/npm-downloads.png?1659345822)
 
-
 Our [**site showcase**](https://docusaurus.io/showcase?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter) already contains almost 300 sites.
 
 And it is far from being exhaustive since so many sites have not yet been added: [Figma](https://www.figma.com/plugin-docs/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter), [Snapchat](https://docs.snap.com/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter), [Courier](https://www.courier.com/docs/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter), [1Password](https://developer.1password.com/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)...
@@ -82,13 +78,12 @@ Not to mention the many internal sites of companies like Microsoft, LinkedIn, Sh
 
 Some examples:
 
--   **Big tech**: Microsoft, Snapchat, Shopify, LinkedIn, Meta, SAP, ByteDance, Lacework, Palo Alto Network...
--   **Startups**: Supabase, Ionic, Hasura, Figma, Courier, CodeSandbox, StackBlitz, Redis, Algolia, Hashnode...
--   **OSS**: React-Native, Redux, React-Navigation, Jest, Testing Library, Gulp, Babel, Lerna, pnpm, Electron, Tauri...
--   **Web3**: Iota, Solana, Cardano, Neo, SushiSwap...
+- **Big tech**: Microsoft, Snapchat, Shopify, LinkedIn, Meta, SAP, ByteDance, Lacework, Palo Alto Network...
+- **Startups**: Supabase, Ionic, Hasura, Figma, Courier, CodeSandbox, StackBlitz, Redis, Algolia, Hashnode...
+- **OSS**: React-Native, Redux, React-Navigation, Jest, Testing Library, Gulp, Babel, Lerna, pnpm, Electron, Tauri...
+- **Web3**: Iota, Solana, Cardano, Neo, SushiSwap...
 
 We also have a lot of sites with beautiful customizations that really respect the brand image of the company.
-
 
 ![Sites using Docusaurus v2](https://s3.amazonaws.com/revue/items/images/017/224/051/original/showcase-2.gif?1659345869)
 
@@ -97,7 +92,6 @@ We also have a lot of sites with beautiful customizations that really respect th
 ## My role in all this?
 
 Two years ago, I was scrolling on Twitter when I came across this:
-
 
 [![](https://user-images.githubusercontent.com/749374/182660849-cc39d9d0-85ad-481c-a681-743a9c5b20c7.png)](https://twitter.com/sebastienlorber/status/1232059882091749376)
 
@@ -117,14 +111,12 @@ I would really appreciate if you could help us **make the launch a success**. A
 
 The main platforms we are launching on:
 
--   [Twitter](https://twitter.com/docusaurus/status/1554000364432769025?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [Product Hunt](https://www.producthunt.com/posts/docusaurus-2-0?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [Hacker News](https://news.ycombinator.com/item?id=32303052&utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Twitter](https://twitter.com/docusaurus/status/1554000364432769025?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Product Hunt](https://www.producthunt.com/posts/docusaurus-2-0?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Hacker News](https://news.ycombinator.com/item?id=32303052&utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
 
 Thanks and see you soon with some fresh React news :)
-
 
 ![Our cutest mascot Slash 💕](https://s3.amazonaws.com/revue/items/images/017/224/190/mail/CleanShot_2022-08-01_at_11.08.03_402x.png?1659346116)
 
 Our cutest mascot Slash 💕
-
