--- a/website/newsletter/118/index.mdx
+++ b/website/newsletter/118/index.mdx
@@ -1,8 +1,8 @@
 ---
-slug: /NUMBER-TODO
+slug: /118
 title: "📨 #TEMPLATE: ..."
 authors: [slorber]
-date: 12-31-2022
+date: 10-03-2022
 image: /img/TWIR_POST.png
 draft: true
 ---
