--- a/website/newsletter/111.mdx
+++ b/website/newsletter/111.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 111
+slug: /111
 title: "📨 #111: Reassure, Multiplayer Cursors, Next.js, Meteor, Storybook, TanStack, FlashList, Bun..."
 authors: [slorber]
 date: 07-06-2022
@@ -24,12 +24,12 @@ I often forget to mention it here, but I keep an [Indie Hacker](https://www.ind
 
 🙏 **Support the newsletter:**
 
--   😘 **Recommend it to your friends**: it really helps!
--   💸 [**Sponsor This Week In React**](https://gist.github.com/slorber/cb732fb5d0a002c4d73236a9baeba7bb?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   😍 [**Write testimonials on Twitter**](https://twitter.com/sebastienlorber/timelines/1448942785814466561?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   📨 Reply to this [**email**](mailto:lorber.sebastien@gmail.com?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter): feedback is welcome
--   👥 Follow on [**LinkedIn**](https://www.linkedin.com/company/this-week-in-react/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 😘 **Recommend it to your friends**: it really helps!
+- 💸 [**Sponsor This Week In React**](https://gist.github.com/slorber/cb732fb5d0a002c4d73236a9baeba7bb?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
+- 😍 [**Write testimonials on Twitter**](https://twitter.com/sebastienlorber/timelines/1448942785814466561?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
+- 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
+- 📨 Reply to this [**email**](mailto:lorber.sebastien@gmail.com?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter): feedback is welcome
+- 👥 Follow on [**LinkedIn**](https://www.linkedin.com/company/this-week-in-react/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
 
 ---
 
@@ -65,15 +65,15 @@ Presents the different problems that state management libs have to solve, and co
 
 **Extras:**
 
--   📜 [Deploy Next.js 12.2 on Netlify today](https://www.netlify.com/blog/deploy-nextjs-12-2/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): Next.js latest edge features can run on Netlify too
--   📜 [Use Next.js 12.2 On-Demand ISR to automatically refresh stale data](https://jonmeyers.io/blog/use-next-js-12-2-on-demand-isr-and-supabase-function-hooks-to-automatically-refresh-stale-data?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   📖 [Thinking in Efffects](https://twitter.com/dan_abramov/status/1544090471655415810?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new doc page, work-in-progress
--   🐦 [Remix + Svelte](https://twitter.com/crim_codes/status/1542684471195045889?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🐦 [Astro Preact compat option](https://twitter.com/astrodotbuild/status/1542511038230237185?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🎥 [A Fresh new web framework is out](https://www.youtube.com/watch?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter&v=4boXExbbGCk)
--   📦 [FramerMotion 6.4](https://twitter.com/mattgperry/status/1544323698211045376?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new hook useInView()
--   📦 [TanStack Table v8](https://twitter.com/tannerlinsley/status/1542925072502968320?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new React-Table version is now framework-agnostic and also supports Svelte, Solid, Vue
--   📦 [storybook-addon-docusaurus](https://storybook.js.org/addons/storybook-addon-docusaurus?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 📜 [Deploy Next.js 12.2 on Netlify today](https://www.netlify.com/blog/deploy-nextjs-12-2/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): Next.js latest edge features can run on Netlify too
+- 📜 [Use Next.js 12.2 On-Demand ISR to automatically refresh stale data](https://jonmeyers.io/blog/use-next-js-12-2-on-demand-isr-and-supabase-function-hooks-to-automatically-refresh-stale-data?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 📖 [Thinking in Efffects](https://twitter.com/dan_abramov/status/1544090471655415810?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new doc page, work-in-progress
+- 🐦 [Remix + Svelte](https://twitter.com/crim_codes/status/1542684471195045889?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🐦 [Astro Preact compat option](https://twitter.com/astrodotbuild/status/1542511038230237185?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🎥 [A Fresh new web framework is out](https://www.youtube.com/watch?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter&v=4boXExbbGCk)
+- 📦 [FramerMotion 6.4](https://twitter.com/mattgperry/status/1544323698211045376?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new hook useInView()
+- 📦 [TanStack Table v8](https://twitter.com/tannerlinsley/status/1542925072502968320?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): new React-Table version is now framework-agnostic and also supports Svelte, Solid, Vue
+- 📦 [storybook-addon-docusaurus](https://storybook.js.org/addons/storybook-addon-docusaurus?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
 
 ---
 
@@ -95,9 +95,9 @@ Looking to hire React developers? You can post Bounties of your own to be featur
 
 Hey! This is Tim from Storetasker. We run the best Shopify dev freelance network. I would love for you to apply if you enjoy building Shopify sites or are excited about leveraging Shopify's **cutting-edge React framework** for building custom storefronts: [**Hydrogen**](https://hydrogen.shopify.dev/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter).
 
-Accepted devs on the network work on a freelance basis, and we present them with great opportunities to work on some of the best Shopify brands (Alo Yoga, Chubbies, JUDY & many many more). 
+Accepted devs on the network work on a freelance basis, and we present them with great opportunities to work on some of the best Shopify brands (Alo Yoga, Chubbies, JUDY & many many more).
 
-The great thing about Storetasker is that devs aren't in competition with each other - they just pick up the jobs that match their interests. Beyond that - it's a very tight-knit community. 
+The great thing about Storetasker is that devs aren't in competition with each other - they just pick up the jobs that match their interests. Beyond that - it's a very tight-knit community.
 
 Feel free to apply directly via this [link](https://www.storetasker.com/become-an-expert?utm_campaign=thisweekinreact&utm_medium=thisweekinreact&utm_source=thisweekinreact) to join.
 
@@ -115,14 +115,14 @@ Lists the API support of each React-Native runtime (JSC, V8, Android...) in a co
 
 **Extras:**
 
--   📜 [What's New in React Native 0.69 --- How to Upgrade and Why it Matters](https://blog.devgenius.io/whats-new-in-react-native-0-69-how-to-upgrade-and-why-it-matters-59f0841c08fc?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🧵 [Expo 46 + web](https://twitter.com/Baconbrix/status/1542431795903451136?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): Evan Bacon gives details about changes in web support and also confirms the ambition to replace Webpack by Metro.
--   🧵 [React-Native vs mobile native trends](https://twitter.com/GergelyOrosz/status/1542020036587667457?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): the development of native apps seems to decrease.
--   🐦 [FlatList vs FlashList perf comparison](https://twitter.com/almouro/status/1542848782693449728?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🐦 [React-Native vs Flutter diagram](https://twitter.com/t3dotgg/status/1544168855412428801?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🐦 [Webpack Module Federation + React Native](https://twitter.com/ScriptedAlchemy/status/1542311673964273664?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🎙️ [RNR 241 - Redux Toolkit vs MobX-State-Tree Showdown](https://reactnativeradio.com/episodes/rnr-241-redux-toolkit-vs-mobx-state-tree-showdown?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   🎥 [The React Native Avengers: GestureHandler, Reanimated, and Skia](https://www.youtube.com/watch?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter&v=yBuhnVDXekQ)
+- 📜 [What's New in React Native 0.69 --- How to Upgrade and Why it Matters](https://blog.devgenius.io/whats-new-in-react-native-0-69-how-to-upgrade-and-why-it-matters-59f0841c08fc?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🧵 [Expo 46 + web](https://twitter.com/Baconbrix/status/1542431795903451136?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): Evan Bacon gives details about changes in web support and also confirms the ambition to replace Webpack by Metro.
+- 🧵 [React-Native vs mobile native trends](https://twitter.com/GergelyOrosz/status/1542020036587667457?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): the development of native apps seems to decrease.
+- 🐦 [FlatList vs FlashList perf comparison](https://twitter.com/almouro/status/1542848782693449728?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🐦 [React-Native vs Flutter diagram](https://twitter.com/t3dotgg/status/1544168855412428801?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🐦 [Webpack Module Federation + React Native](https://twitter.com/ScriptedAlchemy/status/1542311673964273664?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🎙️ [RNR 241 - Redux Toolkit vs MobX-State-Tree Showdown](https://reactnativeradio.com/episodes/rnr-241-redux-toolkit-vs-mobx-state-tree-showdown?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- 🎥 [The React Native Avengers: GestureHandler, Reanimated, and Skia](https://www.youtube.com/watch?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter&v=yBuhnVDXekQ)
 
 ---
 
@@ -134,16 +134,15 @@ A new JavaScript runtime that competes directly with Node.js and Deno on perform
 
 **Extras:**
 
--   [Safari Technology Preview 148](https://webkit.org/blog/12992/release-notes-for-safari-technology-preview-148/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): :has(), Container Queries, inert...
--   [New to the web platform in June](https://web.dev/web-platform-06-2022/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [Color.js: A library that takes color seriously](https://lea.verou.me/2022/06/releasing-colorjs/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [Faster page loads using server think-time with Early Hints](https://developer.chrome.com/blog/early-hints/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [The end of Internet Explorer](https://web.dev/the-end-of-ie/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [TransformStream is now supported cross-browser](https://web.dev/transformstream/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [wasmbuild - Using Rust in Deno and Web Apps](https://deno.com/blog/wasmbuild?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [CSS Cascade Layers -- There's a Polyfill for That!](https://www.oddbird.net/2022/06/21/cascade-layers-polyfill/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [CSS - Breaking Out of a Central Wrapper](https://css-irl.info/breaking-out-of-a-central-wrapper/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
--   [Vue 2.7 "Naruto"](https://blog.vuejs.org/posts/vue-2-7-naruto.html?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Safari Technology Preview 148](https://webkit.org/blog/12992/release-notes-for-safari-technology-preview-148/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter): :has(), Container Queries, inert...
+- [New to the web platform in June](https://web.dev/web-platform-06-2022/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Color.js: A library that takes color seriously](https://lea.verou.me/2022/06/releasing-colorjs/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Faster page loads using server think-time with Early Hints](https://developer.chrome.com/blog/early-hints/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [The end of Internet Explorer](https://web.dev/the-end-of-ie/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [TransformStream is now supported cross-browser](https://web.dev/transformstream/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [wasmbuild - Using Rust in Deno and Web Apps](https://deno.com/blog/wasmbuild?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [CSS Cascade Layers -- There's a Polyfill for That!](https://www.oddbird.net/2022/06/21/cascade-layers-polyfill/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [CSS - Breaking Out of a Central Wrapper](https://css-irl.info/breaking-out-of-a-central-wrapper/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+- [Vue 2.7 "Naruto"](https://blog.vuejs.org/posts/vue-2-7-naruto.html?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
 
 ![](https://user-images.githubusercontent.com/749374/177528236-692a4831-67d0-48d7-926c-f7e2d57a836e.png)
-
