--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 116
+slug: /116
 title: "📨 #116: Next.js, Gatsby, Blitz, Fresh, Astro, Preact, Redwood, Deno, Remotion, React-Native, Expo, TypeScript, Lightning CSS..."
 authors: [slorber]
 date: 09-09-2022
