--- a/website/newsletter/117/index.mdx
+++ b/website/newsletter/117/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: 117
+slug: /117
 title: "📨 #117: React criticism, useEvent, Next.js, Remix, Gatsby, Expo, Storybook, Ignite, React-Native, TypeScript, Qwik..."
 authors: [slorber]
 date: 09-27-2022
