--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /118
-title: "📨 #TEMPLATE: ..."
+title: "📨 #118: ..."
 authors: [slorber]
 date: 12-31-2022
 image: /img/TWIR_POST.png
@@ -37,7 +37,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Sponsor2 />
+<Todo />
 
 ---
 
