--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -59,7 +59,7 @@ import Support from "../_support.mdx";
 
 Pas de contenu cette semaine 😅
 
-💡Tu peux m'envoyer tes articles en me répondant à [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+💡Tu peux m'envoyer tes articles: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 <Todo />
 
