--- a/website/newsletter/118/index.mdx
+++ b/website/newsletter/118/index.mdx
@@ -9,6 +9,8 @@ draft: true
 
 Hi everyone!
 
+> TODO REACT BRUSSELS INTRO
+
 <Todo />
 
 <!-- truncate -->
@@ -23,7 +25,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)
+
+Have you already tried [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)? It's the headless CMS with a Visual Editor designed for both developers and marketers!
+
+Use Storyblok React SDK to quickly build reusable components and fetch the content to create your React, Next.js, Remix, or even React-Native applications, websites or eCommerces.
+
+Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en) and find it out yourself!
 
 ---
 
@@ -37,6 +45,8 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
+> TODO REACT BRUSSELS INTRO
+
 <Todo />
 
 ---
@@ -49,7 +59,13 @@ import Support from "../_support.mdx";
 
 ## 🧑‍💻 Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Product Engineer at Causal, Remote/London/NY, $150-250k**](https://jobs.lever.co/causal-app/4acaafbe-ef3d-45a6-bbe6-687c022d727c?lever-origin=applied&lever-source%5B%5D=thisweekinreact.com)
+
+Causal is a Series A Startup (backed by Coatue/Accel) building an all-in-one tool for working with numbers and visualizing data. We're looking for strong React engineers who can solve difficult UX/performance challenges.
+
+🧑‍💼 [**G2i - 100% Remote React Native Jobs**](https://twitter.com/gabe_g2i/status/1563204813881425926?s=20&t=ArRLC77BpRwXXCdx8fnUqw)
+
+We have several roles open for developers focused on React Native! Pay is ~160k plus 10% bonus. You must have production experience with RN and be based in the US. DM [@gabe_g2i](https://twitter.com/gabe_g2i) to learn more and don't forget to mention This Week in React.
 
 💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
 
