add masteos sponsor

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -61,6 +61,10 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 
 ## 🧑‍💻Jobs {#jobs}
 
+🧑‍💼 [**Masteos - Lead ReactJS - Hybride ou Remote - 75-90k€**](https://www.welcometothejungle.com/fr/companies/masteos/jobs/lead-front-reactjs-h-f_paris?q=97ae44f44512e0f1968e134f33de64ea&o=1376093)
+
+Masteos réinvente l’expérience de l’investissement locatif, en proposant un parcours entièrement dématérialisé et un accompagnement de haut niveau aux particuliers qui souhaitent acheter un bien pour le louer.
+
 🧑‍💼 [**Matters - Senior Software Engineer (React/Node)**](https://bit.ly/NLReactH)
 
 Envie de challenges et de contribuer à des réussites entrepreneuriales ? Rejoins notre startup studio pour construire des produits variés et complexes dans une culture devOps, une stack JS, des code reviews, tests et déploiements automatisés. Paris, remote flexible, 50K€-65K€.
