--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -82,11 +82,11 @@ Paris 75008 - 2j de TT/sem.
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 🎥 [JavaScript : 7 choses à maîtriser pour React](https://www.youtube.com/watch?v=HrrBtXKWtlg)
+- 🎥 [React + Three.js, le combo parfait pour la 3D dans ton navigateur](https://www.youtube.com/watch?v=TU_k0658vYc)
+- 📜 [Recapt Q3 2022](https://buchet.tech/blog/recapt-q3-2022)
 
-💡Tu peux m'envoyer tes articles: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 ---
 
