Add react-brussels sponsors

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -9,7 +9,7 @@ draft: true
 
 Salut à tous !
 
-> TODO REACT BRUSSELS INTRO
+La conférence [React Brussels](https://www.react.brussels/) a lieu dans à peine 2 semaine, le 14 Octobre 2022. Il ne reste que [quelques places disponibles](https://ti.to/bejs/react-brussels-2022/with/in-person-ticket-copy,group-3-tickets-20,group-4-tickets-25,group-5-tickets-30,student-junior-pass?source=undefined), mais il est aussi possible d'y [assister en ligne](https://ti.to/bejs/react-brussels-2022/discount/online_lastweek).
 
 <Todo />
 
@@ -37,7 +37,8 @@ Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_sour
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Ryan Florence - Thinking in Remix](https://twitter.com/ryanflorence/status/1574852767113281537)
+- [Beta React docs - All the commonly used APIs documented - link from prod doc](https://twitter.com/dan_abramov/status/1575367224541560833)
 
 <SubscribeFormEmbed />
 
@@ -97,6 +98,8 @@ Paris 75008 - 2j de TT/sem.
 - [Gifs without the .gif - The most performant image and video options](https://css-tricks.com/gifs-without-the-gif-the-most-performant-image-and-video-options-right-now/)
 - [Use cases for CSS comparison functions](https://ishadeed.com/article/use-cases-css-comparison-functions/)
 - [Node.js 18 - `node --watch`](https://github.com/nodejs/node/pull/44366)
+- [State of CSS Survey 2022](https://stateofcss.com/en-us/)
+- [Progressively enhance for a more resilient web](https://jjenzz.com/progressively-enhance-for-a-more-resilient-web)
 
 ---
 
