--- a/website/newsletter/118/index.mdx
+++ b/website/newsletter/118/index.mdx
@@ -45,7 +45,21 @@ Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thi
 
 ## 💸 Sponsor {#sponsor2}
 
-> TODO REACT BRUSSELS INTRO
+[**REACT BRUSSELS**](https://www.react.brussels/) is back for its first **Hybrid** edition to ever happen in the ❤️of Europe.
+
+Talks about the **trendiest tech and skills** (Playwright, WebVR, UseEffect, Data Fetching, Remix …) will be on agenda; from some of the **brightest minds** in the React arena; namely :
+
+- Tejas Kumar: DevRel Director **Xata**
+- Kathleen McMahon: Sr Design System Eng. **Northwestern Mutual**
+- David Khourshid: Founder **Stately**
+- Shaundai Person: Sr Software Eng. N**etflix**
+- Debbie O'Brien: Sr Program Manager **Microsoft**
+
+Afterparty, Contests, Job Opportunities, Belgian 🍺, Swag, City Tour ... all is there to last long beyond the conference itself !
+
+**REACT BRUSSELS** is **15 IRL tickets** away from **Sold-Out** ! Be quick, **[Grab yours](https://ti.to/bejs/react-brussels-2022/with/in-person-ticket-copy,group-3-tickets-20,group-4-tickets-25,group-5-tickets-30,student-junior-pass?source=undefined)** and join more than 200 Devs celebrating REACT In-Person !
+
+Can't join OFFLINE !? Then, here's your **30€ ONLINE** 🎟 (Instead of 99€) ; **to secure now & [here](https://ti.to/bejs/react-brussels-2022/discount/online_lastweek) 😜**
 
 <Todo />
 
